# homework-checker

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
server/: .coverage  .dockerignore  .flake8  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.rq  entrypoint.dev.sh  entrypoint.prod.sh  entrypoint.sh  manage.py  pyproject.toml
server/apps/accounts/: admin.py  apps.py  models.py  validators.py
server/apps/accounts/api/: serializers.py  views.py
server/apps/accounts/migrations/: 0001_initial.py  0002_alter_customuser_options.py  0002_auto_20201123_1905.py  0002_auto_20210324_0109.py  0003_auto_20201123_1920.py  0004_auto_20201126_1436.py  0005_auto_20210314_1556.py
server/apps/flatpages/: models.py
server/apps/flatpages/api/: serializers.py  views.py
server/apps/flatpages/migrations/: 0001_initial.py  0002_auto_20210319_2100.py
server/apps/homework/: __init__.py  admin.py  apps.py  helpers.py  models.py  storage.py  tasks.py  validators.py
server/apps/homework/api/: permissions.py  serializers.py  views.py  (+1 more)
server/apps/teaching/: __init__.py  admin.py  apps.py  helpers.py  models.py
server/config/: asgi.py  urls.py  wsgi.py
server/config/settings/: base.py  dev.py  development.py  prod.py  production.py
server/core/: api_urls.py
server/templates/: base.html
server/templates/lectures/: detail.html
server/templates/pages/: home.html
server/tests/: conftest.py
server/tests/accounts/: factories.py  test_api.py
server/tests/homework/: factories.py  test_api.py  test_models.py
server/tests/teaching/: factories.py  test_api.py  test_models.py
src/: .coverage  .coveragerc  .dockerignore  Dockerfile  Dockerfile.prod  manage.py  pyproject.toml
src/apps/api/: serializers.py  urls.py  views.py
src/apps/exercises/: models.py
src/apps/frontend/: package.json
src/apps/teaching/: admin.py  apps.py  models.py  urls.py  views.py
src/config/: urls.py
src/config/settings/: base.py  dev.py  prod.py
src/fixtures/: lectures.yaml
src/staticfiles/: staticfiles.json
src/templates/lectures/: index.html
src/tests/api/: test_views.py
src/tests/teaching/: factories.py  test_models.py  test_serializers.py  test_views.py
(+128 files in other folders)
